--- a/app/views/application/home_page.html.erb
+++ b/app/views/application/home_page.html.erb
@@ -7,3 +7,7 @@
 <% end %>
 <p><%= t('.minister_count', count: Minister.count) %></p>
 <%# link_to "New Game", new_country_path %>
+<div>
+  <%= link_to_unless_current "English", locale: "en" %>
+  <%= link_to_unless_current "Hebrew", locale: "he" %>
+</div>
