--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,4 +1,4 @@
-<div class="card js-bottom-margin" dir="rtl">
+<div class="card js-bottom-margin bg-light">
   <div class="card-body">
     <h5 class="card-title"><%= @event.title %></h5>
     <p class="card-text"><%= @event.description %></p>
