Some more translations

--- a/app/views/application/home_page.html.erb
+++ b/app/views/application/home_page.html.erb
@@ -8,6 +8,6 @@
 <p><%= t('.minister_count', count: Minister.count) %></p>
 <%# link_to "New Game", new_country_path %>
 <div>
-  <%= link_to_unless_current "English", locale: "en" %>
-  <%= link_to_unless_current "Hebrew", locale: "he" %>
+  <%# link_to_unless_current "English", locale: "en" %>
+  <%# link_to_unless_current "Hebrew", locale: "he" %>
 </div>
