--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
     <%= render 'application/favicon' %>
     </head>
 
-  <body class="bg-light">
+  <body class="bg-light mx-1 my-1">
     <% if admin_signed_in? %>
       <div>
         <%= link_to 'Home',         root_path %>
