--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -53,7 +53,7 @@
         <strong><%= Country.human_attribute_name(:comms) %>:</strong>             <%= commshash[country.comms.to_sym].split[0] %>
       </li>
       <li class="nav-item">
-        <strong>Social <%= Country.human_attribute_name(:social_sec) %>:</strong> <%= social_sechash[country.social_sec.to_sym].split[0] %>
+        <strong><%= Country.human_attribute_name(:social_sec) %>:</strong>        <%= social_sechash[country.social_sec.to_sym].split[0] %>
       </li>
       <li class="nav-item">
         <strong><%= Country.human_attribute_name(:health) %>:</strong>            <%= healthhash[country.health.to_sym].split[0] %>
