--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -13,7 +13,7 @@
       <div class="bd-highlight w-100">
         <div class="d-flex flex-row bd-highlight">
           <div class="pr-2 bd-highlight flex-fill"><strong>התחממות:</strong>  <%= country.deg %>°C</div>
-          <div class="pr-2 bd-highlight flex-fill"><strong>איכות חיים:</strong>      <%= country.life_level %></div>
+          <!-- <div class="pr-2 bd-highlight flex-fill"><strong>איכות חיים:</strong>      <%= country.life_level %></div> -->
           <div class="pr-2 bd-highlight flex-fill">
             <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> -->
               <i class="material-icons" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">menu</i>
