--- a/app/views/countries/_form.html.erb
+++ b/app/views/countries/_form.html.erb
@@ -24,7 +24,7 @@
 
 <footer class="footer fixed-bottom bg-info">
   <div class="container text-white">
-    <%= Country.human_attribute_name(:budget) %>: <span id="budget"><%= @country.budget%></span>
+    <%= Country.human_attribute_name(:budget) %>: <span id="budget"><%= @country.budget%></span> מיליון
     <span class="budget-minus"></span>
   </div>
 </footer>
