--- a/app/views/application/home_page.html.erb
+++ b/app/views/application/home_page.html.erb
@@ -1,6 +1,6 @@
 <h1><%= t ".title" %></h1>
 <div class="container">
-    <blockquote class="quote-box">
+    <blockquote class="quote-box bg-info">
       <p class="quotation-mark">
         “
       </p>
@@ -28,3 +28,4 @@
   <%# link_to_unless_current "English", locale: "en" %>
   <%# link_to_unless_current "Hebrew", locale: "he" %>
 <!-- </div> -->
+<p class="pr-1"><%= t ".instructions_html" %></p>
