--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -93,3 +93,19 @@ blockquote{
 .writer{
 	margin-right: 5px;
 }
+
+@keyframes yourAnimation{
+    0%{
+        transform: rotate(0) scale(1);
+        }
+    50%{
+        transform: rotate(0) scale(1.3);
+        }
+    100%{
+        transform: rotate(0) scale(1);
+        }
+}
+
+#warning{
+    animation: yourAnimation 2s infinite 0s linear;
+}
