--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,6 +30,15 @@
 	height: 5rem
 }
 
+.mb-5rem{
+	margin-bottom: 5rem;
+}
+.event-title{
+	font-size: 0.8rem;
+}
+.option-title{
+	font-size: 1.0rem;
+}
 .bottom-0{
 	bottom: 0;
 }
