--- a/app/views/application/game_over.html.erb
+++ b/app/views/application/game_over.html.erb
@@ -1,31 +1,58 @@
 <h1><%= t "country.game_over.title" %></h1>
-
-<div class="">
-  <%= t('country.game_over.year_survived', count: (@country.year - 2020)) %>
+<h5 class="d-flex justify-content-center mb-2">
+  <div class="bg-primary rounded-pill w-75 text-white text-center">
+    <%= t('country.game_over.score') %>
+    <h1 class="text-center m-0">
+      <%= t('country.game_over.score_num', count: (@country.score)) %>
+    </h1>
+    <%= t('country.game_over.points') %>
+  </div>
+</h5>
+<div class="d-flex mb-2">
+  <div class="d-flex justify-content-center w-50 mx-1">
+    <div class="bg-success rounded-pill w-100 text-white text-center">
+      <%= t('country.game_over.survived') %>
+      <h3 class="text-center m-0">
+        <%= t('country.game_over.years_count', count: (@country.year - 2020)) %>
+      </h3>
+      <%= t('country.game_over.years') %>
+    </div>
+  </div>
+  <div class="d-flex justify-content-center w-50 mx-1">
+    <div class="bg-danger rounded-pill w-100 text-white text-center">
+      <%= t('country.game_over.lost') %>
+      <h3 class="text-center m-0">
+        <%= t('country.game_over.lives_lost_count', count: ((@country.init_civ - @country.civ_num).round)) %>
+      </h3>
+      <%= t('country.game_over.million_civs') %>
+    </div>
+  </div>
 </div>
-<div class="">
-  <%= t('country.game_over.turns_survived', count: @country.options.count) %>
-</div>
-<!-- <div class=""> -->
-  <%# t('country.game_over.turns_survived', count: (@country.year - 2020) / 5) %>
-<!-- </div> -->
-<div class="">
-  <%= t('country.game_over.lives_lost', count: @country.init_civ - @country.civ_num) %>
-</div>
-<div class="">
-  <%= t('country.game_over.civil_war') if @country.is_torn_apart %>
-</div>
-<div class="">
-  <%= t('country.game_over.war') if @country.is_conquered %>
-</div>
-<div class="">
-  <%= t('country.game_over.options') %>:
-  <ul>
+<hr>
+<div class="mb-5rem">
+  <div class="">
+    <%= t('country.game_over.civil_war') if @country.is_torn_apart %>
+  </div>
+  <div class="">
+    <%= t('country.game_over.war') if @country.is_conquered %>
+  </div>
+  <div class="">
+    <h3><%= t('country.game_over.options') %></h3>
     <% @country.options.uniq.each do |option| %>
-      <li><%= option.title %></li>
+    <div class="rounded-pill bg-white shadow mb-3 d-flex px-4 py-1 align-items-center justify-content-between">
+      <div class="">
+        <div class="text-secondary event-title">
+          <%= option.event.title %>
+        </div>
+        <div class="option-title"><%= option.title %></div>
+      </div>
+      <% if option.amount > 0 %>
+        <p class="card-text event-title text-success"><%= option.amount.abs.to_s + "+ " + Country.human_attribute_name(option.on_what) %></p>
+      <% else %>
+        <p class="card-text event-title text-danger"><%= option.amount.abs.to_s + "- " + Country.human_attribute_name(option.on_what) %></p>
+      <% end %>
+    </div>
     <% end %>
-  </ul>
+  </div>
+  <%= link_to I18n.t("country.game_over.new_game"), root_path %>
 </div>
-
-
-<%= link_to I18n.t("country.game_over.new_game"), root_path %>
