--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,7 +30,12 @@
 .h-5{
 	height: 5rem
 }
-
+.font-icon{
+	font-size: 0.8rem !important;
+}
+.w-20{
+	width: 20%;
+}
 .mb-5rem{
 	margin-bottom: 5rem;
 }
