--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,13 +1,11 @@
 <% if params[:country_id] %>
   <% country = Country.find(params[:country_id]) %>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-bottom" dir="rtl">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-bottom shadow p-0" dir="rtl">
     <div class="d-flex flex-column bd-highlight w-100  line-height-1">
       <div class="bd-highlight w-100">
         <div class="d-flex flex-row bd-highlight w-100">
-          <div class="pr-2 bd-highlight flex-fill "><div class="navbar-brand font-bold" ><%= country.name %></div></div>
-          <div class="pr-2 bd-highlight flex-fill "><i class="material-icons">access_time</i><%= country.year %></div>
-          <div class="pr-2 bd-highlight flex-fill "><strong><i class="material-icons">people_outline</i></strong><%= country.civ_num %></div>
-          <div class="pr-2 bd-highlight flex-fill "><strong><i class="material-icons">attach_money</i></strong><%= country.budget %></div>
+          <div class="m-0 bd-highlight flex-fill navbar-brand py-1 font-bold w-25  text-center"><%= country.name %></div>
+
         </div>
       </div>
       <div class="bd-highlight w-100">
@@ -15,12 +13,12 @@
           <% if country.resilience == "civil_war" || country.reg_rel == "war" %>
           <div class="pr-2 bd-highlight flex-fill" id="warning"><strong><i class="material-icons text-danger">warning</i></strong></div>
           <% end %>
-          <div class="pr-2 bd-highlight flex-fill"><strong>התחממות:</strong>  <%= country.deg %>°C</div>
-          <!-- <div class="pr-2 bd-highlight flex-fill"><strong>איכות חיים:</strong>      <%= country.life_level %></div> -->
-          <div class="pr-2 bd-highlight flex-fill">
-            <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> -->
-              <i class="material-icons" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">menu</i>
-            <!-- </button> -->
+          <div class="bd-highlight flex-fill w-25 text-center py-1"><%= country.deg %>°C</div>
+          <div class="bd-highlight flex-fill w-25 text-center py-1"><i class="material-icons font-icon">access_time</i><%= country.year %></div>
+          <div class="bd-highlight flex-fill w-25 text-center py-1"><strong><i class="material-icons font-icon">person_outline</i></strong><%= country.civ_num %></div>
+          <div class="bd-highlight flex-fill w-25 text-center py-1"><strong><i class="material-icons font-icon">attach_money</i></strong><%= country.budget %>M</div>
+          <div class="bd-highlight flex-fill text-center py-1" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <i class="material-icons">menu</i>
           </div>
         </div>
       </div>
